fix: break long words on overflow (#79)
* fix: break long words on overflow

* chore: revert doc

* move overflow-wrap to the body

--- a/src/core/styles/base.css
+++ b/src/core/styles/base.css
@@ -21,6 +21,7 @@ body {
   transition: color .5s, background-color .5s;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-wrap: break-word;
 }
 
 blockquote,
